--- a/pokedex/pubspec.yaml
+++ b/pokedex/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sliding_sheet:
   flutter_icons:
   intl:
+  dio:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
